full posting/rendering flow

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ url = "https://pypi.python.org/simple"
 django = "*"
 python-decouple = "*"
 "psycopg2-binary" = "*"
+commonmark = "*"
 
 
 [dev-packages]
